bin/testsuite/tests/compiler/src/errors/compiler5637.swg
#global testerror "Err0391"

#test
{
    let a = B'(0, )
}
